allow extending classes to set stylesheet parameters in word-tei conversion
git-svn-id: https://tei.svn.sourceforge.net/svnroot/tei/trunk/javalib@5008 e5332ce4-a50f-0410-b94b-d658400b0204

--- a/.classpath
+++ b/.classpath
@@ -11,5 +11,6 @@
 	<classpathentry kind="lib" path="lib/saxonb9-1-0-2j/saxon9-xpath.jar"/>
 	<classpathentry kind="lib" path="lib/saxonb9-1-0-2j/saxon9-xqj.jar"/>
 	<classpathentry kind="lib" path="lib/saxonb9-1-0-2j/saxon9.jar"/>
+	<classpathentry kind="lib" path="lib/trang-20081028/trang.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
