switch to Saxon 9.2
git-svn-id: https://tei.svn.sourceforge.net/svnroot/tei/trunk/javalib@7675 e5332ce4-a50f-0410-b94b-d658400b0204

--- a/build.xml
+++ b/build.xml
@@ -63,12 +63,7 @@
     <target name="deploy" depends="compile">
         <jar destfile="${deploy.dir}/tei-utils.jar" 
                      basedir="${build.dir}" includes="**/*.*">
-            <zipfileset src="${lib.dir}/saxonb9-1-0-2j//saxon9-dom.jar" includes="**/*.*"/>
-            <zipfileset src="${lib.dir}/saxonb9-1-0-2j/saxon9-dom4j.jar" includes="**/*.*"/>
-            <zipfileset src="${lib.dir}/saxonb9-1-0-2j/saxon9-jdom.jar" includes="**/*.*"/>
-            <zipfileset src="${lib.dir}/saxonb9-1-0-2j/saxon9-s9api.jar" includes="**/*.*"/>
-            <zipfileset src="${lib.dir}/saxonb9-1-0-2j/saxon9-xpath.jar" includes="**/*.*"/>
-            <zipfileset src="${lib.dir}/saxonb9-1-0-2j/saxon9.jar" includes="**/*.*"/>
+            <zipfileset src="${lib.dir}/saxon/saxon9he.jar" includes="**/*.*"/>
 
             <zipfileset src="${lib.dir}/trang-20081028/trang.jar" includes="**/*.*"/>
 
@@ -76,7 +71,7 @@
               <attribute name="Created-By" value="Arno Mittelbach"/>
               
               <attribute name="Implementation-Title" value="tei-java-lib"/>
-              <attribute name="Implementation-Version" value="0.1beta"/>
+              <attribute name="Implementation-Version" value="0.2beta"/>
             </manifest>
           </jar>
     </target>
